[project]
name = "zheliku-tool"
version = "0.1.4"
description = "Lightweight timing decorator & context manager with loguru-like formatting, sync/async."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "zheliku" }]
keywords = ["logging", "timer", "performance", "decorator", "asyncio"]
dependencies = []

[project.urls]
Homepage = "https://github.com/zheliku/zheliku-tool"
Issues = "https://github.com/zheliku/zheliku-tool/issues"
Repository = "https://github.com/zheliku/zheliku-tool.git"
Changelog = "https://github.com/zheliku/zheliku-tool/master/CHANGELOG.md"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true